--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <header style="color:#FF0000;height:70px;width:100%;">
-        </header>"
+        </header>
         <footer style="color:#00FF00;height:60px;width:100%;">
         Best School
         </footer>
