--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
-<html lang = "en">
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <title>AirBnB Clone</title>
         <link rel="icon" href="images/icon.png">
         <link rel="stylesheet" href="styles/3-common.css">
         <link rel="stylesheet" href="styles/3-header.css">
-        <link rel="stylesheet" href="styles/3-footer.css">   
+        <link rel="stylesheet" href="styles/3-footer.css">
     </head>
     <body>
         <header>
-            <div class="logo">
+            <div class="header">
+                <div class="logo">
+                </div>
             </div>
         </header>
         <footer>
-            Best School
+            <div class="footText">
+                <p>Best School</p>
+            </div>
         </footer>
     </body>
 </html>
